# zebras_project1

./: .gitignore  LICENSE  README.md
project1/test/: dune  test_challenge.ml  test_core.ml  tests_base.ml
project1/test/suites/challenge/00common/: 00num00.ml  05bool00.ml  10arith00.ml  30eq00.ml  35ge00.ml  35gt00.ml  35lt00.ml
project1/test/suites/challenge/05errors/: 50typeerr00.ml  55unbound00.ml  55unbound01.ml  55unbound02.ml  60undec00.ml  60undec01.ml  60undec02.ml
project1/test/suites/challenge/10functions/: 00funval00.ml  10funarg00.ml  15returnfun00.ml
project1/test/suites/challenge/90zippyzebras/: 00multargs00_chal.ml  00multargs01.ml  01recfunc01.ml  02mutrec00.ml  02zeroargs02.ml  04func04.ml  04recdiv04.ml  06nestedlet00.ml  08arithlets00.ml  10doubleneg00.ml  10recfunc00.ml  10recfunc00_chal.ml  12nestedbools00.ml  14add00.ml  16div00.ml  22trilets00.ml  24nestedfuns00.ml  26trifuncs00.ml  26trifuncs00_chal.ml  28nestedletfunc00.ml  30nestedcalls00_chal.ml  33typeerror00.ml  33typeerror00_chal.ml  33typeerror01.ml  33typeerror01_chal.ml  33typeerror02.ml  33typeerror03.ml  33typeerror05.ml  33typeerror06.ml  33typeerror08.ml  33typeerror09.ml  34unbound00.ml  35undec00.ml  35undec01_chal.ml  36unboundvar00.ml  36unboundvar02.ml  36unboundvar02_chal.ml
project1/test/suites/common/: 20or00.ml  30ne00.ml  45call00.ml
project1/test/suites/core/00common/: 03neg00.ml  15and00.ml  25not00.ml  35le00.ml  35let00.ml  40if00.ml
project1/test/suites/core/90zippyzebras/: 00recsub00.ml  01te01.ml  02mutrec00.ml  05nestedlet05.ml  06nestedlet00.ml  (+23 more)
(+11 files in other folders)
